Add header CSS styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <h2 class="header__h2">The creative view</h2>
+            <h2 class="header__h2">The creative crew</h2>
             <div class="header__team-info">
                 <h4 class="header__h4">Who we are</h4>
                 <p class="header__paragraph">
