--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
                 <figure class="gallery__item gallery__item--1">
                     <img src="img/photo1.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Bill Mahoney</span>
-                    <span class="gallery__right--caption">Product Owner</span>
+                    <span class="gallery__right-caption">Product Owner</span>
                 </figure>
                 <figure class="gallery__item gallery__item--2">
                     <img src="img/photo2.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Saba Cabarera</span>
-                    <span class="gallery__right--caption">Art Director</span>
+                    <span class="gallery__right-caption">Art Director</span>
                 </figure>
                 <figure class="gallery__item gallery__item--1">
                     <img src="img/photo3.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Shae Le</span>
-                    <span class="gallery__right--caption">Tech Lead</span>
+                    <span class="gallery__right-caption">Tech Lead</span>
                 </figure>
                 <figure class="gallery__item gallery__item--1">
                     <img src="img/photo4.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Skylah Lu</span>
-                    <span class="gallery__right--caption">UX Designer</span>
+                    <span class="gallery__right-caption">UX Designer</span>
                 </figure>
                 <figure class="gallery__item gallery__item--1">
                     <img src="img/photo5.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Griff Richards</span>
-                    <span class="gallery__right--caption">Developer</span>
+                    <span class="gallery__right-caption">Developer</span>
                 </figure>
                 <figure class="gallery__item gallery__item--1">
                     <img src="img/photo6.png" alt="" class="gallery__img">
                     <span class="gallery__bottom-caption">Stan John</span>
-                    <span class="gallery__right--caption">Developer</span>
+                    <span class="gallery__right-caption">Developer</span>
                 </figure>
             </div>
             <footer class="footer">Mateusz Rosiak @ DevChallenges.io</footer>
