Add footer styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -54,7 +56,9 @@
                     <span class="gallery__right-caption">Developer</span>
                 </figure>
             </div>
-            <footer class="footer">Mateusz Rosiak @ DevChallenges.io</footer>
+            <footer class="footer"><span class="footer__span">
+                    Mateusz Rosiak @ DevChallenges.io
+                </span></footer>
 
         </header>
     </div>
